[package]
name = "heim-node-exporter"
version = "0.1.0"
authors = ["svartalf <self@svartalf.info>"]
edition = "2018"
publish = false

[dependencies]
heim = "0.0.2"
tide = "^0.2"
http = "^0.1"
http-service = "^0.2"
futures-preview = "0.3.0-alpha.16"
bytes = "0.4.12"
dtoa = "0.4.3"
itoa = "0.4.3"

[profile.release]
debug = true