[package]
name = "heim-node-exporter"
version = "0.1.0"
authors = ["svartalf <self@svartalf.info>"]
edition = "2018"
publish = false

[dependencies]
heim = "0.0.4"
tide = { git = "https://github.com/rustasync/tide", branch = "master" }
http = "^0.1"
http-service = "^0.2"
futures-preview = "0.3.0-alpha.17"
bytes = "0.4.12"
dtoa = "0.4.3"
itoa = "0.4.3"

[patch.crates-io]
http-service = { git = "https://github.com/rustasync/http-service", branch = "master" }
http-service-hyper = { git = "https://github.com/rustasync/http-service", branch = "master" }
http-service-mock = { git = "https://github.com/rustasync/http-service", branch = "master" }